fixing long post title wrapping issue w/CSS

--- a/src/static/design.sass
+++ b/src/static/design.sass
@@ -15,11 +15,12 @@
 .columns
   width: 920px
 
-#content
-  width: 600px
+#main
+  width: 650px
 
 #sidebar
   min-width: 175px
+  max-width: 230px
   float: right
 
 // custom design
